# ciphey

./: .rustfmt.toml
crates/ciphey/: Cargo.toml
crates/ciphey-kvstore/: Cargo.toml
crates/ciphey-kvstore/src/: lib.rs
crates/ciphey/fuzz/: Cargo.toml
crates/ciphey/src/: flags.rs  main.rs
crates/ciphey/src/backends/crypto/: mod.rs
crates/ciphey/src/backends/crypto/age/: mod.rs  tests.rs
crates/ciphey/src/backends/crypto/transparent/: mod.rs  tests.rs
crates/ciphey/src/cli/: defaults.rs  error.rs  mod.rs  util.rs
crates/libciphey/: Cargo.toml
crates/libciphey-fs/: Cargo.toml  cargo-test-10050-8909550467827615528_0.profraw  cargo-test-10309-8909550467827615528_0.profraw  cargo-test-10369-8909550467827615528_0.profraw  cargo-test-10773-8909550467827615528_0.profraw  cargo-test-10919-8909550467827615528_0.profraw
crates/libciphey-fs/src/: cargo-test-7692-8909550467827615528_0.profraw  cargo-test-8116-8909550467827615528_0.profraw  directory.rs  file.rs  lib.rs  tests.rs
crates/libciphey/src/: crypto.rs  filetype.rs  lib.rs  storage.rs
